# 24Fall-ADS-Project

./: .gitignore  README.md  README.txt
docs/project1/: report.md
docs/project8/: report.md
src/project1/: CMakeLists.txt  README.md  run.sh
src/project1/data/: data_random_10000.in  data_reverse_10000.in  data_same_10000.in  debug.in
src/project1/include/: BST.h
src/project1/src/: AVL.cpp  baseline.cpp  main.cpp  splay.cpp
src/project1/utils/: autobench.py  dataGen.cpp  dataGen.py
src/project2/: CMakeLists.txt  README.md  init.sh  run.sh
src/project2/include/: MinHeap.h
src/project2/src/: BinaryHeap.cpp  BinomialHeap.cpp  FibonacciHeap.cpp  LeftistHeap.cpp  difftest.cpp  main.cpp
src/project2/utils/: autobench.py  dataGen.py  dataGenCustem.py
src/project3/src/: brute.cpp  check.cpp  compile.sh  fruit.cpp  static.cpp
src/project4/: CMakeLists.txt  README.md  init.sh  run.sh
src/project4/include/: BSeq.h  helper.h
src/project4/src/: BItree.cpp  Baseline.cpp  Merge.cpp  Onm.cpp  main.cpp
src/project4/utils/: autobench.py  dataGen.py
src/project6/: CMakeLists.txt  Makefile  init.sh
src/project6/include/: timer.h
src/project6/src/: BFDH.cpp  FFDH.cpp  NFDH.cpp  split.cpp
src/project6/utils/: autobench.py  dataGen.py  draw.py
src/project8/: init.sh  plot.py  serial.cpp  split.cpp
